feat: add edit notes logic part
