# backend/swagger.yml
@@ -207,3 +207,49 @@ paths:
           $ref: "#/components/responses/UnprocessableEntity"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
+
+  /note/edit-note/{noteId}:
+    put:
+      summary: Edit Note
+      description: |
+        - Edit Note
+      tags:
+        - Note
+      security:
+        - bearerAuth: []
+
+      parameters:
+        - in: path
+          name: noteId
+          schema:
+            type: string
+            example: 666d589428caabae12712a38
+
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: test
+                content:
+                  type: string
+                  example: test of content
+                tags:
+                  type: array
+                  example: ["viral", "trending"]
+                isPinned:
+                  type: boolean
+                  example: false
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "409":
+          $ref: "#/components/responses/ConflictError"
+        "422":
+          $ref: "#/components/responses/UnprocessableEntity"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
